--- a/app/views/children/show.html.slim
+++ b/app/views/children/show.html.slim
@@ -11,7 +11,21 @@ section.hero.is-primary
       p
         |Behavior this year: 
         = @child.behavior
+
+- if @child.list
+  section.section
+    .tile.is-ancestor
+      .tile.is-parent
+        .tile.is-child.box
+          .content
+            h3.title
+              =link_to "##{@child.list.id}", child_lists_path(@child)
+            p
+              |Number of gifts: 
+              = @child.gifts.count
+
 section.section
   .buttons
-    =link_to "Create Christmas list", new_child_list_path(@child), class: "button is-warning"
+    - if !@child.list
+      =link_to "Create Christmas list", new_child_list_path(@child), class: "button is-warning"
     =link_to "Back", :back, class: "button is-warning"
