--- a/app/views/lists/show.html.slim
+++ b/app/views/lists/show.html.slim
@@ -4,7 +4,7 @@ section.hero.is-primary
       h1.title List details
 
 
-= @list.gifts.each do |gift|
+- @list.gifts.each do |gift|
   section.section
     .tile.is-ancestor
       .tile.is-parent
