--- a/app/views/children/index.html.slim
+++ b/app/views/children/index.html.slim
@@ -3,9 +3,9 @@ section.hero.is-primary
     .hero-container
       h1.title List of children in the house
 
-= @children.each do |child|
-  section.section
-    .tile.is-ancestor
+section.section
+  .tile.is-ancestor
+    - @children.each do |child|
       .tile.is-parent
         .tile.is-child.box
           .content
@@ -17,3 +17,7 @@ section.hero.is-primary
             p
               |Age: 
               = child.age
+
+section.section
+  .buttons
+    =link_to "Add child", new_house_child_path(@house), class: "button is-warning"
