--- a/app/views/houses/index.html.slim
+++ b/app/views/houses/index.html.slim
@@ -3,7 +3,7 @@ section.hero.is-primary
     .hero-container
       h1.title List of houses
 
-= @houses.each do |house|
+- @houses.each do |house|
   section.section
     .tile.is-ancestor
       .tile.is-parent
