--- a/app/views/lists/show.html.slim
+++ b/app/views/lists/show.html.slim
@@ -3,20 +3,20 @@ section.hero.is-primary
     .hero-container
       h1.title List details
 
-
-- @list.gifts.each do |gift|
-  section.section
-    .tile.is-ancestor
-      .tile.is-parent
-        .tile.is-child.box
-          .content
-            h3.title
-              =link_to "##{gift.gift_info.id}", gift_info_path(gift.gift_info)
-            p
-              |Name: 
-              = gift.gift_info.name
-
 section.section
   .buttons
-    =link_to "Modify list", child_list_path, class: "button is-warning"
+    =link_to "Modify list", child_update_list_path, class: "button is-warning", method: :put
     =link_to "Child profile", child_path(@child), class: "button is-warning"
+
+- if @child.gifts
+  = @child.gifts.each do |gift|
+    section.section
+      .tile.is-ancestor
+        .tile.is-parent
+          .tile.is-child.box
+            .content
+              h3.title
+                =link_to "##{gift.gift_info.id}", gift_info_path(gift.gift_info)
+              p
+                |Name: 
+                = gift.gift_info.name
