--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,3 +10,5 @@ html
   body
     = render 'layouts/header'
     = yield
+    = javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places&key=#{ENV['GOOGLE_API_BROWSER_KEY']}"
+    = javascript_pack_tag "map"
